src/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> COMMAND U
Rule 2     S -> COMMAND
Rule 3     U -> NUMBER
Rule 4     U -> ITEM_ID
Rule 5     U -> CARD_ID A
Rule 6     U -> CARD_ID
Rule 7     U -> CARD_ID TO P
Rule 8     U -> COMMAND
Rule 9     A -> CARD_ID A
Rule 10    A -> CARD_ID
Rule 11    P -> ACTION
Rule 12    P -> ACTION C
Rule 13    P -> ACTION E
Rule 14    P -> ACTION V
Rule 15    C -> CHANGE_KEY OF CARD_ID K
Rule 16    C -> CHANGE_KEY OF CARD_ID
Rule 17    K -> TO R
Rule 18    R -> NUMBER
Rule 19    R -> SUIT
Rule 20    R -> ALPHA_VAL
Rule 21    E -> F WITH F
Rule 22    F -> NUMBER
Rule 23    F -> CARD_ID
Rule 24    V -> NUMBER

Terminals, with rules where they appear

ACTION               : 11 12 13 14
ALPHA_VAL            : 20
CARD_ID              : 5 6 7 9 10 15 16 23
CHANGE_KEY           : 15 16
COMMAND              : 1 2 8
ITEM_ID              : 4
NUMBER               : 3 18 22 24
OF                   : 15 16
SUIT                 : 19
TO                   : 7 17
WITH                 : 21
error                : 

Nonterminals, with rules where they appear

A                    : 5 9
C                    : 12
E                    : 13
F                    : 21 21
K                    : 15
P                    : 7
R                    : 17
S                    : 0
U                    : 1
V                    : 14

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . COMMAND U
    (2) S -> . COMMAND

    COMMAND         shift and go to state 2

    S                              shift and go to state 1

state 1

    (0) S' -> S .



state 2

    (1) S -> COMMAND . U
    (2) S -> COMMAND .
    (3) U -> . NUMBER
    (4) U -> . ITEM_ID
    (5) U -> . CARD_ID A
    (6) U -> . CARD_ID
    (7) U -> . CARD_ID TO P
    (8) U -> . COMMAND

    $end            reduce using rule 2 (S -> COMMAND .)
    NUMBER          shift and go to state 5
    ITEM_ID         shift and go to state 6
    CARD_ID         shift and go to state 7
    COMMAND         shift and go to state 3

    U                              shift and go to state 4

state 3

    (8) U -> COMMAND .

    $end            reduce using rule 8 (U -> COMMAND .)


state 4

    (1) S -> COMMAND U .

    $end            reduce using rule 1 (S -> COMMAND U .)


state 5

    (3) U -> NUMBER .

    $end            reduce using rule 3 (U -> NUMBER .)


state 6

    (4) U -> ITEM_ID .

    $end            reduce using rule 4 (U -> ITEM_ID .)


state 7

    (5) U -> CARD_ID . A
    (6) U -> CARD_ID .
    (7) U -> CARD_ID . TO P
    (9) A -> . CARD_ID A
    (10) A -> . CARD_ID

    $end            reduce using rule 6 (U -> CARD_ID .)
    TO              shift and go to state 10
    CARD_ID         shift and go to state 8

    A                              shift and go to state 9

state 8

    (9) A -> CARD_ID . A
    (10) A -> CARD_ID .
    (9) A -> . CARD_ID A
    (10) A -> . CARD_ID

    $end            reduce using rule 10 (A -> CARD_ID .)
    CARD_ID         shift and go to state 8

    A                              shift and go to state 11

state 9

    (5) U -> CARD_ID A .

    $end            reduce using rule 5 (U -> CARD_ID A .)


state 10

    (7) U -> CARD_ID TO . P
    (11) P -> . ACTION
    (12) P -> . ACTION C
    (13) P -> . ACTION E
    (14) P -> . ACTION V

    ACTION          shift and go to state 13

    P                              shift and go to state 12

state 11

    (9) A -> CARD_ID A .

    $end            reduce using rule 9 (A -> CARD_ID A .)


state 12

    (7) U -> CARD_ID TO P .

    $end            reduce using rule 7 (U -> CARD_ID TO P .)


state 13

    (11) P -> ACTION .
    (12) P -> ACTION . C
    (13) P -> ACTION . E
    (14) P -> ACTION . V
    (15) C -> . CHANGE_KEY OF CARD_ID K
    (16) C -> . CHANGE_KEY OF CARD_ID
    (21) E -> . F WITH F
    (24) V -> . NUMBER
    (22) F -> . NUMBER
    (23) F -> . CARD_ID

    $end            reduce using rule 11 (P -> ACTION .)
    CHANGE_KEY      shift and go to state 17
    NUMBER          shift and go to state 20
    CARD_ID         shift and go to state 18

    C                              shift and go to state 14
    E                              shift and go to state 15
    V                              shift and go to state 16
    F                              shift and go to state 19

state 14

    (12) P -> ACTION C .

    $end            reduce using rule 12 (P -> ACTION C .)


state 15

    (13) P -> ACTION E .

    $end            reduce using rule 13 (P -> ACTION E .)


state 16

    (14) P -> ACTION V .

    $end            reduce using rule 14 (P -> ACTION V .)


state 17

    (15) C -> CHANGE_KEY . OF CARD_ID K
    (16) C -> CHANGE_KEY . OF CARD_ID

    OF              shift and go to state 21


state 18

    (23) F -> CARD_ID .

    WITH            reduce using rule 23 (F -> CARD_ID .)
    $end            reduce using rule 23 (F -> CARD_ID .)


state 19

    (21) E -> F . WITH F

    WITH            shift and go to state 22


state 20

    (24) V -> NUMBER .
    (22) F -> NUMBER .

    $end            reduce using rule 24 (V -> NUMBER .)
    WITH            reduce using rule 22 (F -> NUMBER .)


state 21

    (15) C -> CHANGE_KEY OF . CARD_ID K
    (16) C -> CHANGE_KEY OF . CARD_ID

    CARD_ID         shift and go to state 23


state 22

    (21) E -> F WITH . F
    (22) F -> . NUMBER
    (23) F -> . CARD_ID

    NUMBER          shift and go to state 25
    CARD_ID         shift and go to state 18

    F                              shift and go to state 24

state 23

    (15) C -> CHANGE_KEY OF CARD_ID . K
    (16) C -> CHANGE_KEY OF CARD_ID .
    (17) K -> . TO R

    $end            reduce using rule 16 (C -> CHANGE_KEY OF CARD_ID .)
    TO              shift and go to state 27

    K                              shift and go to state 26

state 24

    (21) E -> F WITH F .

    $end            reduce using rule 21 (E -> F WITH F .)


state 25

    (22) F -> NUMBER .

    $end            reduce using rule 22 (F -> NUMBER .)


state 26

    (15) C -> CHANGE_KEY OF CARD_ID K .

    $end            reduce using rule 15 (C -> CHANGE_KEY OF CARD_ID K .)


state 27

    (17) K -> TO . R
    (18) R -> . NUMBER
    (19) R -> . SUIT
    (20) R -> . ALPHA_VAL

    NUMBER          shift and go to state 29
    SUIT            shift and go to state 30
    ALPHA_VAL       shift and go to state 31

    R                              shift and go to state 28

state 28

    (17) K -> TO R .

    $end            reduce using rule 17 (K -> TO R .)


state 29

    (18) R -> NUMBER .

    $end            reduce using rule 18 (R -> NUMBER .)


state 30

    (19) R -> SUIT .

    $end            reduce using rule 19 (R -> SUIT .)


state 31

    (20) R -> ALPHA_VAL .

    $end            reduce using rule 20 (R -> ALPHA_VAL .)

